[Organizer Panel] Added organizer event list

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -24,6 +24,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuOrganizerLink">
                     <a class="dropdown-item" th:href="@{/organizer/create_event}" th:text="'Utwórz wydarzenie'">Utwórz wydarzenie</a>
+                    <a class="dropdown-item" th:href="@{/organizer/events}" th:text="'Moje wydarzenia'">Moje wydarzenia</a>
                 </div>
             </li>
             <li class="nav-item">
