--- a/src/main/resources/templates/organizer/forms/create-event-form.html
+++ b/src/main/resources/templates/organizer/forms/create-event-form.html
@@ -16,6 +16,9 @@
                 <li class="nav-item">
                     <a class="side-nav-link active" href="#" th:href="@{'/organizer/create_event'}">Utwórz wydarzenie</a>
                 </li>
+                <li class="nav-item">
+                    <a class="side-nav-link" href="#" th:href="@{'/organizer/events'}">Moje wydarzenia</a>
+                </li>
             </ul>
         </div>
         <div class="col-md-9">
