--- a/src/main/resources/templates/event.html
+++ b/src/main/resources/templates/event.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title th:text="${event.name + ' · IT Events'}">Java Dev Talks #1 · IT Events</title>
@@ -66,6 +67,9 @@
             <label class="col-sm-2 app-label">Opis:</label>
             <span class="col-sm-10" style="text-align: left;" th:text="${event.description}">Spotkanie rzeszowskiej grupy pasjonatów języka Java.</span>
         </div>
+    </div>
+    <div sec:authorize="isAuthenticated() && hasRole('ORGANIZER')">
+        <a class="btn form-button" href="#" th:href="@{'/organizer/events/' + ${event.id} + '/edit'}">Zarządzaj wydarzeniem</a>
     </div>
 </div>
 
