--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -13,6 +13,9 @@
     <a class="navbar-brand" href="#" th:href="@{/}">IT Events</a>
     <div class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
+            <li class="nav-item" sec:authorize="isAuthenticated() && hasRole('USER')">
+                <a class="nav-link" th:href="@{/events/my_events}" th:text="'Moje wydarzenia'">Moje wydarzenia</a>
+            </li>
             <li class="nav-item dropdown" sec:authorize="isAuthenticated() && hasRole('ORGANIZER')">
                 <a class="nav-link dropdown-toggle"
                    href="#"
