Created user directory for user templates

--- a/src/main/resources/templates/user/app-user-table.html
+++ b/src/main/resources/templates/user/app-user-table.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Użytkownicy · IT Events</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link href="../static/styles/main.css" th:href="@{/styles/main.css}" rel="stylesheet"/>
+    <link href="../../static/styles/main.css" th:href="@{/styles/main.css}" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
 <body onload="setCurrentSortOption();">
@@ -113,7 +113,7 @@
 </div>
 
 <th:block th:replace="fragments :: scripts"></th:block>
-<script src="../static/scripts/main.js" th:src="@{/scripts/main.js}"></script>
-<script type="text/javascript" src="../static/scripts/validation.js" th:src="@{/scripts/validation.js}"></script>
+<script src="../../static/scripts/main.js" th:src="@{/scripts/main.js}"></script>
+<script type="text/javascript" src="../../static/scripts/validation.js" th:src="@{/scripts/validation.js}"></script>
 </body>
 </html>
