--- a/src/main/resources/templates/registration-form.html
+++ b/src/main/resources/templates/registration-form.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Rejestracja · IT Events</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link href="../../static/styles/main.css" th:href="@{/styles/main.css}" rel="stylesheet"/>
+    <link href="../static/styles/main.css" th:href="@{/styles/main.css}" rel="stylesheet"/>
 </head>
 <body>
 <nav th:replace="fragments :: navbar"></nav>
@@ -81,6 +81,6 @@
 </div>
 
 <th:block th:replace="fragments :: scripts"></th:block>
-<script type="text/javascript" src="../../static/scripts/validation.js" th:src="@{/scripts/validation.js}"></script>
+<script type="text/javascript" src="../static/scripts/validation.js" th:src="@{/scripts/validation.js}"></script>
 </body>
 </html>
