Changed scope of files in appuser package

--- a/src/main/resources/templates/admin/forms/app-user-account-edit-form.html
+++ b/src/main/resources/templates/admin/forms/app-user-account-edit-form.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="form-group">
                     <label class="form-label">ROLA</label>
-                    <div th:each="userRole : ${T(pl.patrykdepka.iteventsapp.appuser.model.Role).values()}">
+                    <div th:each="userRole : ${T(pl.patrykdepka.iteventsapp.appuser.domain.Role).values()}">
                         <input type="checkbox"
                                th:id="${userRole}" th:name="${userRole}"
                                class="custom-checkbox"
