Added annotation Value to all dtos in event package

--- a/src/main/resources/templates/event.html
+++ b/src/main/resources/templates/event.html
@@ -68,7 +68,7 @@
             <span class="col-sm-10" style="text-align: left;" th:text="${event.description}">Spotkanie rzeszowskiej grupy pasjonatów języka Java.</span>
         </div>
     </div>
-    <div sec:authorize="isAuthenticated() && hasRole('USER')" th:if="${currentUserIsParticipant == false}">
+    <div sec:authorize="isAuthenticated() && hasRole('USER')" th:if="${event.currentUserIsParticipant == false}">
         <form method="post" th:method="patch" action="#" th:action="@{'/events/' + ${event.id} + '/join'}">
             <button class="btn form-button" type="submit" th:text="'Wezmę udział'">Wezmę udział</button>
         </form>
