--- a/src/main/resources/templates/event.html
+++ b/src/main/resources/templates/event.html
@@ -16,7 +16,7 @@
     </div>
     <div>
         <div class="row" style="margin: 0 0 16px 0;">
-            <img th:src="${'data:' + event.imageType + ';base64,' + event.imageData}" width="480" height="270">
+            <img th:src="${'data:' + event.contentType + ';base64,' + event.imageData}" width="480" height="270">
         </div>
         <div class="row">
             <label class="col-sm-2 app-label">Wydarzenie:</label>
